css/main.css
body	{
	margin: 0;
	padding: 0;
	height: 100%;
}

p	{
	font-family: 'Open Sans', sans-serif;
    font-weight: 400;
}

.container: { 
    max-width: 100%;
    margin: auto 0;
    height: 50%;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;    
}

/*=================== TOP NAVIGATION ===================*/

header {
    height: 60px;
    width: 100%;
    background-color: #151718;
    text-align: left;
    z-index: 3;
}

#logo {
    position: absolute;
    height: 50px;
    margin: 5px 0 0 5px;
}
#logo img {
    top: 0;
    height: 100%; 
}

ul.topNavClass {
    list-style-type: none;
    padding: 0;
    background-color: transparent;
    text-align: none;
    width: 48%; /*width across which topNav spans*/
    margin: auto; /*equal margin on either side of topNav*/
    padding: 0 auto;
    height: 100%; /*100% of header height*/
}

ul li {
    display: inline;
    text-align: center;
    height: 100%; /*100% height of ul, which in turn is 100% height of header*/
    width: 16%; /*width of list element with respect to ul*/
}

#headerHr   {
    height: .35rem;
    width: 16%; 
    margin: 0;
    background: #bb882e;  
    border: none;
    transition: 0s ease-in-out;
    z-index: 1;
    margin-top: -.30rem;
    transform: translate(0%) perspective(100px) rotateX(45deg);
}

.one:hover ~ hr {
  transform: translate(0%) perspective(100px) rotateX(45deg) !important;
}

.two:hover ~ hr {
 transform: translate(100%) perspective(100px) rotateX(45deg) !important;
}

.three:hover ~ hr {
 transform: translate(200%) perspective(100px) rotateX(45deg) !important;
}

.four:hover ~ hr {
 transform: translate(300%) perspective(100px) rotateX(45deg) !important;
}

.five:hover ~ hr {
 transform: translate(400%) perspective(100px) rotateX(45deg) !important;
}

.six:hover ~ hr {
 transform: translate(500%) perspective(100px) rotateX(45deg) !important;
}

.topNavBtn {    /*css for topNav menu buttons*/
    display: inline-block;
    color: #eee;    
    text-align: center;
    padding: 10% 20px;  /*Needs to be addressed in media queries*/
    position: relative;
    text-decoration: none;
    font-size: 17px;
    height: 52%;
    z-index: 2;
}

.topNavLi:hover .topNavBtn {
    color: #bb882e;
}

/*ul.topNavClass li a::after {
    display:block;
    content: attr(id);
    font-weight:bold;
    height:1px;
    color:transparent;
    overflow:hidden;
    visibility:hidden;
    }*/

    /*=================== TOP NAVIGATION DROPDOWN ===================*/

    .topNavLi {
        position: relative;
        display: inline-block;
        margin: 0;
    }

    .dropdown {
        list-style-position: inside;
        position: absolute;
        display: none;
        background-color: #1b1e1f;
        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
        width: 100%;
        z-index: 0;
    }

    .dropdown a    {    /*css for dropdown links*/
        display: block;
        color: #eee;
        padding: 8px 5px;
        text-align: center;
        position: relative;
        text-decoration: none;
        font-size: 15px;
    }

    .dropdown a:first-of-type   {
        padding-top: 14px;
    }

    .dropdown a:hover {
        background-color: #333
    }

    .topNavLi:hover .dropdown {
        display: block;
    }

    .topNavLi:hover .topNavbtn {
        background-color: #3e8e41;
    }

    /*=================== HAMBURGER MENU ===================*/

    #hamburger  {
        cursor:pointer;
        position: absolute;
        color: #eee;
        right: 10px;
        font-size: 36px;
        padding: 5px 20px;
        display: none;
    }

    .myhbSidenav    {

    }

    .hbsidenav {
        height: 100%;
        width: 0;
        position: fixed;
        z-index: 1;
        top: 0;
        right: 0;
        background-color: rgba(21, 23, 24, 0.9);
        box-shadow-left: 16px rgba(0,0,0,0.5);          /*not working - fix*/
        overflow-x: hidden;
        transition: 0.5s;
        padding-top: 60px;
    }

    .hbsidenav a {
        padding: 5px 30px;
        text-decoration: none;
        font-size: 25px;
        color: #eee;
        display: block;
        transition: 0.3s
        opacity: 1;
    }

    .hbsidenav a:hover, .offcanvas a:focus{
        color: #c7840c;
    }

    .hbsidenav .hbclosebtn  {
        position: absolute;
        top: 0;
        right: 10px;
        font-size: 36px;
        padding: 5px 20px;
        color: #bb882e;
    }

    #hbTapSide  {
        height: 100%;
        width: 20%;
        position: fixed;
        z-index: 3;
        top: 0;
        left: 0;
        padding-top: 60px;
        display: block;
    }

    .hbclosebtn {
        color: #bb882e;
    }
    
    .hbclosebtn:active #hamburger  {
        display: inline-block;
    }   

    .accordion {
        background-color: #555;
        cursor: pointer;
        width: 100%;
        border: none;
        text-align: left;
        outline: none;
        font-size: 15px;
        transition: 0.2s;
        opacity: 1;
    }

    .accordion.active, .accordion:hover {
        background-color: #333;
        color: #ddd;
    }

    .accordion.active a, .accordion:hover a {
        color: #ddd;
    }

    .panel {
        padding: 0 18px;
        background-color: #ddd;
        transition: 0.2s;
        display: none;
    }

    .show {
        display: block;
    }

    .pplink {
        transition: 0.2s;
    }

    .pplink a   {
        color: #333;
    }

 /*=================== FOOTER ===================*/

 footer {
    height: 125px;
    width: 100%;
    background-color: #151718;
    text-align: left;
    padding-top: 10px;
    padding-bottom: 20px;
}

.footerMenu    {    
    width: 60%;
    height: 70px;
    margin-left: 25%;
    margin-right: 5%;
}

.footerList    {
    margin: auto;
    float:left;
    display: inline-block;
    text-align: left;
    width: 14%;
    margin-bottom: 5px;
}

.footerListTitle    {
    color: #bb882e;
    text-decoration: none;
}

.footerListTitle a   {
    text-decoration: underline;
}

.footerList0    {
    font-size: 14px;
    width: 90%;
    margin: 0 auto 0 0;
    list-style: none;    
    padding: 0 2% 2% 0;
    position: relative;
    text-decoration: none;
}

.footerList0 a    {
    color: #aaa;
    margin: 0 2%;
    text-decoration: none;
}

.footerList0 a:hover    {
    text-decoration: underline;
}

.footerList1    {
    font-size: 15px;
    width: 90%;
    margin: 0 auto;
    text-align: center;
    padding: 0;
    vertical-align: text-bottom;
}

.footerList1 a  {
    color: #aaa;
    padding: 0 2% 0 2%;
    margin: 0 auto;
    text-align: center;
    display: inline-block;
    position: relative;
    text-decoration: none;
}

li.follow    {
    color:#555;
    padding: 0 2% 0 2%;
    padding-left: 2%;
    padding-right: 2%;
}

#footerHr   {
    width: 1224px;
    border: 1px solid #bb882e;
}

.footerList1 a:hover   {
    text-decoration: underline;
}

.break  {
    display: none;
}

.short  {
    display: none;
}

.iIcon   {
    display: none;
    height: 1px;
    width: 1px;
}

.mobBr   {
    display: none;
}

/*=================== MEDIA QUERIES ===================*/

@media all and (max-width: 1500px) {
    .footerList    {
        width: 16.66%;
    }
    .footerMenu {
        margin-left: 22.5%
    }
}

@media all and (max-width: 1350px) {
    .footerList1    {
        margin-bottom: 10px
    }
    #footerHr   {
        width: 1024px;
    }
}

@media all and (max-width: 1275px) {
    .footerMenu {
        width: 70%;
    }
}

@media all and (max-width: 1150px) {
    #footerHr   {
        width: 90%;
    }
    ul.topNavClass {
        width: 60%;        
    }
    .footerMenu {
        width: 90%;
        margin-left: 7%;
    }
}

@media all and (max-width: 925px) {
    footer  {
        padding-bottom: 40px;
    }
    #footerHr   {
        width: 85%;
    }
    .antiBreak  {
        display: none;
    }
    .break  {
        display: block;
    }
    ul.topNavClass {
        width: 70%;        
    }
    .topNavbtn  {
        font-size: 13px;
    }
}

@media all and (max-width: 840px) {
    .footerList0    {
        display: none;
    }
    .footerMenu    {
        height: 0;
    }
    footer    {
        height: 60px;
    }
}

@media all and (max-width: 800px) {
    ul.topNavClass {
        width: 80%;        
    }
    .topNavbtn  {
        font-size: 10px;
    }
    .full {
        width: 90%;
    }
}

@media all and (max-width: 700px) {
    header    {
        /*position: fixed;*/
    }
    .topNavClass    {
        display: none;
    }
    #hamburger {
        display: inline-block;
    }
    #wallpaper    {
        /*margin-top: 60px;*/
    }
    
}

@media all and (max-width: 480px) {
    footer  {        
        height: 110px
    }
    .footerList   {
        width: 33.33%;
        
        text-align: center;
    }
    .full {
        display:none;
    }
    .short  {
        display: inline-block;
        width: 90%;
    }
    .mobBr    {
        display: block;
    }
}

